# tattoo-website

./: .gitignore  pyproject.toml
tattoowebsite/: manage.py
tattoowebsite/frontend/: package-lock.json
tattoowebsite/portfolio/templates/: base.html  index.html
tattoowebsite/tattoowebsite/: asgi.py  settings.py  urls.py  wsgi.py
