[tool.poetry]
name = "jaden-tattoo-portfolio"
version = "0.1.0"
description = ""
authors = ["jules319 <jules31901@gmail.com>"]
readme = "README.md"
packages = [{include = "jaden_tattoo_portfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
